package com.mxdl.desigin.pattern.behavior.a10_mediator.contract;

/**
 * Description: <ICountry><br>
 * Author:      mxdl<br>
 * Date:        2019/12/20<br>
 * Version:     V1.0.0<br>
 * Update:     <br>
 */
public interface ICountry {
    void sendMessage(String message);
    void notifyMessage(String messaege);
}
