package com.mxdl.desigin.pattern.behavior.a10_mediator.contract;

/**
 * Description: <IUN><br>
 * Author:      mxdl<br>
 * Date:        2019/12/20<br>
 * Version:     V1.0.0<br>
 * Update:     <br>
 */
public interface IUN {
    void sendMessage(String msg, ICountry country);
}
